scriptbasic module is part of the distribution